refactor: Establish common package and move TabNavigator, NumberField and converters there fix: Improve StorefrontView responsive styling fix: Sanitize PurchaseWizard preview HTML fix: Localization string special characters